--- a/abastecimiento-insumos.html
+++ b/abastecimiento-insumos.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="portafolio.html">Portafolio</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link active dropdown-toggle" href="servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Servicios
               </a>
               <ul class="dropdown-menu">
@@ -67,8 +67,8 @@
   <section id="seccBannerSecciones">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12 text-center">
-          <h2>Servicios</h2>
+        <div class="col-md-12 text-center ">
+          <h1>Servicios</h1>
         </div>
 
       </div>
@@ -78,15 +78,15 @@
   <section id="seccServicios" class="section">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-center mb-5">
-          <h2>Abastecimiento de insumos</h2>
+        <div class="col-md-12 text-center my-5 pt-5">
+          <h1>Abastecimiento de insumos</h1>
         </div>
         <div class="col-md-4 text-end ">
 
           <div class="descripcion">
             <div class="row">
               <div class="col-md-9">
-                <h4>Mantenimiento general a inmuebles</h4>
+                <h4>Mantenimiento a inmuebles</h4>
                 <p>Realizamos mantenimiento preventivo y correctivo para inmuebles,
                    asegurando que las instalaciones se mantengan en óptimas condiciones 
                    y funcionando eficientemente.</p>
@@ -152,27 +152,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center mb-5">
-          <h2>Detalle de servicios</h2>
+          <h1>Detalle de servicios</h1>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
-            <img src="img/servicios/s-1-1.jpg" class="card-img-top" alt="...">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="img/servicios/s-2-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Equipo de mobiliario.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
-            <img src="img/servicios/s-1-2.jpg" class="card-img-top" alt="...">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="img/servicios/s-2-2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Insumos de ferreteria</p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
-            <img src="img/servicios/s-1-3.jpg" class="card-img-top" alt="...">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="img/servicios/s-2-3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Insumos de papeleria</p>
             </div>
@@ -180,11 +180,19 @@
         </div>
 
  
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
-            <img src="img/servicios/s-1-4.jpg" class="card-img-top" alt="...">
+        <div class="col-md-6 justify-content-lg-end d-flex">
+          <div class="card">
+            <img src="img/servicios/s-2-4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Anaqueles y estructuras</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 justify-content-lg-start d-flex">
+          <div class="card">
+            <img src="img/servicios/s-1-5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Uniformes</p>
             </div>
           </div>
         </div>
@@ -207,13 +215,13 @@
                   <p class="mt-3 pe-lg-2"><strong>Grupo Bayón</strong> te ofrece soluciones tecnológicas de vanguardia para impulsar tu negocio. 
                     Confía en nuestra experiencia y excelencia para lograr resultados eficientes</p>
 
-                    <div class="footer-social-icon">
+                    <!-- <div class="footer-social-icon">
                         <p>Síguenos</p>
                         <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -235,13 +243,11 @@
                         <h3>Información</h3>
                     </div>
                       <ul class="list">
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Portafolio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="portafolio.html">Portafolio</a></li>
                         <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Contáctanos</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Aviso de privacidad</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
                       </ul>
                   </div>
               </div>
@@ -250,20 +256,23 @@
                     <div class="footer-widget-heading">
                         <h3>Contáctanos</h3>
                     </div>
-                      <div class="footer-text">
-                          <p>
-                            <i class="fa-solid fa-location-dot"></i>
-                             Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México 
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-phone"></i>
-                              +52 55 2312 2113
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-envelope"></i>
-                             contacto@grupobayon.com.mx
-                          </p>
-                      </div>
+                    <div class="footer-text">
+                      <p>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <a href="https://maps.app.goo.gl/STAFuieFTsUnDa2T9" target="_blank">
+                          Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México
+                        </a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-phone"></i>
+                             <a href="tel:+525588820088">+52 55 8882 0088</a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:administracion@grupobayon.com.mx">administracion@grupobayon.com.mx</a>
+                         
+                      </p>
+                  </div>
                 </div>
          </div>
         <div class="row">
