--- a/contactanos.html
+++ b/contactanos.html
@@ -39,7 +39,7 @@
               <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  aria-current="page" href="nosotros.html">Nosotros</a>
+              <a class="nav-link"  aria-current="page" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portafolio.html">Portafolio</a>
@@ -55,7 +55,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactanos.html">Contáctanos</a>
+              <a class="nav-link active" href="contactanos.html">Contáctanos</a>
             </li>
           </ul>
 
@@ -68,7 +68,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Nosotros</h2>
+          <h1>Contáctanos</h1>
         </div>
 
       </div>
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Contáctanos</h2>
+          <h1>¡Podemos ayudarte!</h1>
         </div>
       </div>
       <div class="row mt-5">
@@ -88,44 +88,64 @@
           <div class="contact-information-box-3">
             <div class="row">
               <div class="contact-info">
-                <h6>Dirección:</h6>
-                <p>Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México</p>
-              </div>
-              <div class="contact-info">
-                <h6>Celular:</h6>
-                <p>+52 55 2312 2113</p>
-              </div>
-              <div class="contact-info">
-                <h6>Correo electrónico:</h6>
-                <p>j.barreto@grupobayon.com.mx</p>
+                <p>
+                  <i class="fa-solid fa-location-dot"></i>
+                  <a href="https://maps.app.goo.gl/STAFuieFTsUnDa2T9" target="_blank">
+                    Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México
+                  </a>
+
+                </p>
+                <p>
+                  <i class="fa-solid fa-phone"></i>
+                  <a href="tel:+525588820088">+52 55 8882 0088</a>
+                </p>
+                <p>
+                  <i class="fa-solid fa-envelope"></i>
+                  <a href="mailto:administracion@grupobayon.com.mx">administracion@grupobayon.com.mx</a>
+                </p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-8" data-aos="fade-left">
-          <form class="contact-form form" id="ajax-contact" method="post" action="assets/phpscripts/contact.php" novalidate="true">
+          <form class="contact-form form" id="ajax-contact">
             <div class="mb-3">
               <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@example.com">
+                <input type="email" class="form-control" id="correoCliente" placeholder="name@example.com">
                 <label for="floatingInputGrid">Correo electrónico</label>
               </div>
             </div>
             <div class="mb-3">
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Queremos saber tu opinion" id="floatingTextarea2" style="height: 200px"></textarea>
+                <textarea class="form-control" placeholder="Queremos saber tu opinion" id="comentariosCliente"
+                  style="height: 200px"></textarea>
                 <label for="floatingTextarea2">Comentarios</label>
               </div>
             </div>
-            <button type="submit" class="btn btn-general">Enviar</button>
+            <button type="buttopn" onclick="sendInfoWhats()" class="btn btn-general">Enviar</button>
 
           </form>
         </div>
       </div>
-    </div>      
+    </div>
   </section>
   <section id="seccMaps">
-    <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d940.6784190871384!2d-99.16790353038243!3d19.42477336363368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff361bceaaab%3A0x40966c5d22c47cdb!2sHamburgo%20182-piso%204%20Int%20400%2C%20Ju%C3%A1rez%2C%20Cuauht%C3%A9moc%2C%2006600%20Cuauht%C3%A9moc%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1727733287963!5m2!1ses-419!2smx" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
- </section>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8 m-0 p-0">
+          <iframe class="w-100 h-100" id="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d940.6784190871384!2d-99.16790353038243!3d19.42477336363368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff361bceaaab%3A0x40966c5d22c47cdb!2sHamburgo%20182-piso%204%20Int%20400%2C%20Ju%C3%A1rez%2C%20Cuauht%C3%A9moc%2C%2006600%20Cuauht%C3%A9moc%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1727733287963!5m2!1ses-419!2smx"
+          width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col-md-4 m-0 p-0">
+          <img class="w-100 h-100" src="img/mapa-ubi.jpg" alt="">
+        </div>
+
+      </div>
+    </div>
+
+  </section>
   <section id="seccFooter" class="section">
     <footer>
       <div class="container">
@@ -139,13 +159,13 @@
                   <p class="mt-3 pe-lg-2"><strong>Grupo Bayón</strong> te ofrece soluciones tecnológicas de vanguardia para impulsar tu negocio. 
                     Confía en nuestra experiencia y excelencia para lograr resultados eficientes</p>
 
-                    <div class="footer-social-icon">
+                    <!-- <div class="footer-social-icon">
                         <p>Síguenos</p>
                         <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -167,13 +187,11 @@
                         <h3>Información</h3>
                     </div>
                       <ul class="list">
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Portafolio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="portafolio.html">Portafolio</a></li>
                         <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Contáctanos</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Aviso de privacidad</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
                       </ul>
                   </div>
               </div>
@@ -182,20 +200,23 @@
                     <div class="footer-widget-heading">
                         <h3>Contáctanos</h3>
                     </div>
-                      <div class="footer-text">
-                          <p>
-                            <i class="fa-solid fa-location-dot"></i>
-                             Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México 
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-phone"></i>
-                              +52 55 2312 2113
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-envelope"></i>
-                             contacto@grupobayon.com.mx
-                          </p>
-                      </div>
+                    <div class="footer-text">
+                      <p>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <a href="https://maps.app.goo.gl/STAFuieFTsUnDa2T9" target="_blank">
+                          Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México
+                        </a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-phone"></i>
+                             <a href="tel:+525588820088">+52 55 8882 0088</a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:administracion@grupobayon.com.mx">administracion@grupobayon.com.mx</a>
+                         
+                      </p>
+                  </div>
                 </div>
          </div>
         <div class="row">
