--- a/portafolio.html
+++ b/portafolio.html
@@ -38,10 +38,10 @@
               <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  aria-current="page" href="nosotros.html">Nosotros</a>
+              <a class="nav-link"  aria-current="page" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="portafolio.html">Portafolio</a>
+              <a class="nav-link active" href="portafolio.html">Portafolio</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -67,7 +67,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Portafolio</h2>
+          <h1>Portafolio</h1>
         </div>
 
       </div>
@@ -104,31 +104,31 @@
         </div>     
         <div class="col-md-4 img-wrap">
           <div class="effect-image-1">
-            <img class="w-100" src="img/servicios/ser-1.jpg" alt="image-1">
+            <img class="w-100" src="img/servicios/ser-5.jpg" alt="image-1">
             <div class="overlay simple-overlay-1"></div>
           </div>
         </div>
         <div class="col-md-4 img-wrap">
           <div class="effect-image-1">
-            <img class="w-100" src="img/servicios/ser-1.jpg" alt="image-1">
+            <img class="w-100" src="img/servicios/ser-6.jpg" alt="image-1">
             <div class="overlay simple-overlay-1"></div>
           </div>
         </div>
         <div class="col-md-4 img-wrap">
           <div class="effect-image-1">
-            <img class="w-100" src="img/servicios/ser-1.jpg" alt="image-1">
+            <img class="w-100" src="img/servicios/ser-7.jpg" alt="image-1">
             <div class="overlay simple-overlay-1"></div>
           </div>
         </div>
         <div class="col-md-4 img-wrap">
           <div class="effect-image-1">
-            <img class="w-100" src="img/servicios/ser-2.jpg" alt="image-1">
+            <img class="w-100" src="img/servicios/ser-8.jpg" alt="image-1">
             <div class="overlay simple-overlay-1"></div>
           </div>
         </div>
         <div class="col-md-4 img-wrap">
           <div class="effect-image-1">
-            <img class="w-100" src="img/servicios/ser-3.jpg" alt="image-1">
+            <img class="w-100" src="img/servicios/ser-9.jpg" alt="image-1">
             <div class="overlay simple-overlay-1"></div>
           </div>
         </div>
@@ -149,13 +149,13 @@
                   <p class="mt-3 pe-lg-2"><strong>Grupo Bayón</strong> te ofrece soluciones tecnológicas de vanguardia para impulsar tu negocio. 
                     Confía en nuestra experiencia y excelencia para lograr resultados eficientes</p>
 
-                    <div class="footer-social-icon">
+                    <!-- <div class="footer-social-icon">
                         <p>Síguenos</p>
                         <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -177,13 +177,11 @@
                         <h3>Información</h3>
                     </div>
                       <ul class="list">
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Portafolio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="portafolio.html">Portafolio</a></li>
                         <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Contáctanos</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Aviso de privacidad</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
                       </ul>
                   </div>
               </div>
@@ -192,20 +190,23 @@
                     <div class="footer-widget-heading">
                         <h3>Contáctanos</h3>
                     </div>
-                      <div class="footer-text">
-                          <p>
-                            <i class="fa-solid fa-location-dot"></i>
-                             Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México 
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-phone"></i>
-                              +52 55 2312 2113
-                          </p>
-                          <p>
-                            <i class="fa-solid fa-envelope"></i>
-                             contacto@grupobayon.com.mx
-                          </p>
-                      </div>
+                    <div class="footer-text">
+                      <p>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <a href="https://maps.app.goo.gl/STAFuieFTsUnDa2T9" target="_blank">
+                          Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México
+                        </a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-phone"></i>
+                       <a href="tel:+525588820088">+52 55 8882 0088</a>
+                      </p>
+                      <p>
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:administracion@grupobayon.com.mx">administracion@grupobayon.com.mx</a>
+                         
+                      </p>
+                  </div>
                 </div>
          </div>
         <div class="row">
