--- a/soluciones-tecnologicas.html
+++ b/soluciones-tecnologicas.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="portafolio.html">Portafolio</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link active dropdown-toggle" href="servicios.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Servicios
               </a>
               <ul class="dropdown-menu">
@@ -68,7 +68,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h2>Servicios</h2>
+          <h1>Servicios</h1>
         </div>
 
       </div>
@@ -78,15 +78,15 @@
   <section id="seccServicios" class="section">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-center mb-5">
-          <h2>Soluciones tecnológicas</h2>
+        <div class="col-md-12 text-center my-5 pt-5">
+          <h1>Soluciones tecnológicas</h1>
         </div>
         <div class="col-md-4 text-end ">
 
           <div class="descripcion">
             <div class="row">
               <div class="col-md-9">
-                <h4>Mantenimiento general a inmuebles</h4>
+                <h4>Mantenimiento a inmuebles</h4>
                 <p>Realizamos mantenimiento preventivo y correctivo para inmuebles,
                    asegurando que las instalaciones se mantengan en óptimas condiciones 
                    y funcionando eficientemente.</p>
@@ -152,26 +152,26 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center mb-5">
-          <h2>Detalle de servicios</h2>
+          <h1>Detalle de servicios</h1>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
+        <div class="col-md-4">
+          <div class="card">
             <img src="img/servicios/s-1-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Instalación, configuración y <br>puesta a punto de cableado estructurado.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
+        <div class="col-md-4">
+          <div class="card">
             <img src="img/servicios/s-1-2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Venta y renta de equipo de computo e impresión</p>
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
+        <div class="col-md-4">
+          <div class="card">
             <img src="img/servicios/s-1-3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Refacciones menores de cómputo</p>
@@ -180,8 +180,8 @@
         </div>
 
  
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem;height: 330px;">
+        <div class="col-md-12 d-flex justify-content-center">
+          <div class="card">
             <img src="img/servicios/s-1-4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Venta y renovación de licenciamientos</p>
@@ -207,13 +207,13 @@
                   <p class="mt-3 pe-lg-2"><strong>Grupo Bayón</strong> te ofrece soluciones tecnológicas de vanguardia para impulsar tu negocio. 
                     Confía en nuestra experiencia y excelencia para lograr resultados eficientes</p>
 
-                    <div class="footer-social-icon">
+                    <!-- <div class="footer-social-icon">
                         <p>Síguenos</p>
                         <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#" class="facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -235,13 +235,11 @@
                         <h3>Información</h3>
                     </div>
                       <ul class="list">
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Portafolio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="portafolio.html">Portafolio</a></li>
                         <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Contáctanos</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Aviso de privacidad</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="contactanos.html">Contáctanos</a></li>
                       </ul>
                   </div>
               </div>
@@ -253,15 +251,18 @@
                       <div class="footer-text">
                           <p>
                             <i class="fa-solid fa-location-dot"></i>
-                             Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México 
+                            <a href="https://maps.app.goo.gl/STAFuieFTsUnDa2T9" target="_blank">
+                              Calle Hamburgo No. 182, Piso 4-400, Colonia Juárez, Cuauhtemoc, Ciudad de México
+                            </a>
                           </p>
                           <p>
                             <i class="fa-solid fa-phone"></i>
-                              +52 55 2312 2113
+                               	<a href="tel:+525588820088">+52 55 8882 0088</a>
                           </p>
                           <p>
                             <i class="fa-solid fa-envelope"></i>
-                             contacto@grupobayon.com.mx
+                            <a href="mailto:administracion@grupobayon.com.mx">administracion@grupobayon.com.mx</a>
+                             
                           </p>
                       </div>
                 </div>
